--- a/template/home.twig
+++ b/template/home.twig
@@ -10,11 +10,11 @@
 
     <section class="jumbotron my-4">
         <h1 class="display-3">Final Fantasy</h1>
-        <p class="lead">Si l'on devait retenir qu'un seul mot pour définir un Final Fantasy, sans doute serait-ce : "atmosphère". Une amotsphère unique dont le joueur 
+        <p class="lead text-justify">Si l'on devait retenir qu'un seul mot pour définir un Final Fantasy, sans doute serait-ce : "atmosphère". Une amotsphère unique dont le joueur 
         se sent imprégné, comme s'il rentrait en communion avec un titre d'exception.</p>
-        <p class="lead">Tous les joueurs de Final Fantasy ont tous vécu cette expérience qui consiste à commencer sa partie après le dîner pour l'achever avec les 
+        <p class="lead text-justify">Tous les joueurs de Final Fantasy ont tous vécu cette expérience qui consiste à commencer sa partie après le dîner pour l'achever avec les 
         premières lueurs de l'aube. C'est le syndrome Final Fantasy. Impossible de décrocher, l'immersion est totale.</p> 
-        <p class="lead">C'est un film, un jeu, une aventure que l'on suit et que l'on vit. Le reste, ce sont aussi des décors admirables de finesse, des effets visuels proches
+        <p class="lead text-justify">C'est un film, un jeu, une aventure que l'on suit et que l'on vit. Le reste, ce sont aussi des décors admirables de finesse, des effets visuels proches
         des effets spéciaux hollywoodiens, une véritable quête artistique qui fait du joueur un esthète, adapte du jeu, spectateur du beau.</p>  
         <a href="index.php?url=products/new&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
     </section>
@@ -31,7 +31,6 @@
                     <h4 class="card-title">
                         <a href="index.php?url=product&id={{product.id}}">{{product.name}}</a>
                     </h4>
-                    <p class="card-text">{{product.description}}</p>
                     <p>Prix : {{product.price}} euros</p>
                 </div>
 
