--- a/template/layout.twig
+++ b/template/layout.twig
@@ -7,6 +7,7 @@
     	<meta name="keywords" content="final fantasy materia arme tifa cloud">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./public/img/fav.png">
     	{% block title %}{% endblock %}
 
         {% block stylesheets %}
@@ -14,7 +15,6 @@
         <!--<link href="public/css/bootstrap.min.css" rel="stylesheet">-->
         <link href="public/css/bootstrap.min.css" rel="stylesheet">
         <link href="public/css/style.css" rel="stylesheet">
-        <link href="public/css/layout.css" rel="stylesheet"></link>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         {% endblock %}
         
