--- a/template/addCategoryForm.twig
+++ b/template/addCategoryForm.twig
@@ -34,6 +34,7 @@
                         
                         <div class="text-center">
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+                            <input type="hidden" name="csrf_token" value="{{csrf}}">
                         </div>
                     </form>
                 </div>
