--- a/template/addProductForm.twig
+++ b/template/addProductForm.twig
@@ -48,6 +48,7 @@
                             <hr class="my-4">
                             <div class="text-center">
                                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Valider</button>
+                                <input type="hidden" name="csrf_token" value="{{csrf}}">
                             </div>
                         </form>
                     </div>
