--- a/template/updateAccountForm.twig
+++ b/template/updateAccountForm.twig
@@ -36,6 +36,7 @@
                             </div>
                             <div class="text-center">
                                 <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+                                <input type="hidden" name="csrf_token" value="{{csrf}}">
                             </div>
                         </form>
                     </div>
@@ -57,6 +58,7 @@
                             
                             <div class="text-center">
                                 <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+                                <input type="hidden" name="csrf_token" value="{{csrf}}">
                             </div>
                         </form>
                     </div>
