--- a/template/updateProductForm.twig
+++ b/template/updateProductForm.twig
@@ -51,6 +51,7 @@
                             
                             <div class="text-center">
                                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Valider</button>
+                                <input type="hidden" name="csrf_token" value="{{csrf}}">
                             </div>
                         </form>
                     </div>
